Reworked search to include filters for adult and completed.

--- a/pbsite/main/templates/main/title/search_results.html
+++ b/pbsite/main/templates/main/title/search_results.html
@@ -5,14 +5,22 @@
 {% block title %}Title Search Results{% endblock %}
 
 {% block content %}
-<a href="{% url home_page %}">Back to Home Page</a> | <a href="{% url category_list %}">Category List</a>
-<p>
-<div id="searchform">
-<form action="{% url title_search_redirect %}" method="POST">
-{{ titleSearchForm }}<input type="submit" value="Search" class="formbutton"/> 
-</form>
+<a href="{% url home_page %}">Back to Home Page</a> | <a href="{% url category_list %}">Category List</a> | <a href="{% url title_list %}">Show all books</a>
+<br clear="all" /><br />
+<div id="keywords" style="float:left;width:380px;background:#A0A0A0;" align="center">
+	<form action="{% url title_search_redirect %}" method="POST">
+		<table>
+			<tr><th>&nbsp;</th><td>&nbsp;</td><td rowspan="3"><input type="submit" value="Search" class="formbutton"/></td></tr>
+			{{ titleSearchForm.as_table }}
+		</table>
+	</form>
 </div>
-</p>
+<div id="categories" style="float:right;width:380px;background:#A0A0A0;" align="center">
+	<form action="{% url category_redirect %}" method="POST">
+		{{ categoryChoiceForm }}<input type="submit" value="Go!" class="formbutton"/> 
+	</form>
+</div>
+<br clear="all" /><br />
 <table>
 {% if result_count %}
 <h3>{{ result_count }} titles found whose name or description contained "{{ keywords }}"</h3>
