--- a/pbsite/templates/header.html
+++ b/pbsite/templates/header.html
@@ -28,11 +28,11 @@
 				<li><a href="{% url django_authopenid.views.signin %}">Login/Register</a></li>
 			{% endif %}
 			<li><a href="http://podiobooks.com/blog">Blog</a></li> 
-			<li><a href="http://podiobooks.com/donate.php">Why Donate?</a></li> 
+			<li><a href="/donate/">Why Donate?</a></li> 
 			<li><a href="{% url title_search_form %}">Search</a></li> 
 			<li><a href="http://podiobooks.com/about.php">FAQ</a></li> 
-			<li><a href="http://podiobooks.com/staff.php">Staff</a></li> 
-			<li><a href="http://podiobooks.com/authors.php">Authors</a></li> 
+			<li><a href="/staff/">Staff</a></li> 
+			<li><a href="/authors/" %}">Authors</a></li> 
 			
 			<li><a href="http://podiobooks.com/authors/pbpro.php">PBPro</a></li> 
 			<li><a href="http://podiobooks.com/legal.php">Privacy and Legal</a></li> 
