--- a/pbsite/templates/admin/base_site.html
+++ b/pbsite/templates/admin/base_site.html
@@ -1,10 +1,11 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
+{% block title %}{{ title }} | {{ site_name }} {% trans 'Administration' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'Django administration' %}</h1>
+
+<h1 id="site-name">{{ site_name }} {% trans 'Administration' %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
