Fixed blog URL to be fully-qualified back to legacy site.

--- a/src/podiobooks/main/templates/main/index.html
+++ b/src/podiobooks/main/templates/main/index.html
@@ -49,7 +49,7 @@
 <div id="latestnews">
 <div class="heading">
     <p>
-        Latest News from the <a href="/blog">Blog</a>
+        Latest News from the <a href="http://podiobooks.com/blog">Blog</a>
     </p>
     <img src="{{ MEDIA_URL }}legacy/css/images/headingbookend.jpg" width="32" height="35" />
 </div>
