Removed jQuery from local install in favor of Google CDN Version.
Former-commit-id: 6862c8b04393fcc29e69de3cebcf70aa199c8821
Former-commit-id: ca199b96beebb7f51d941d64cdc5474b0249ad7d
Former-commit-id: 4f3f59b8cd170959fc7603cd85968705698b263f
Former-commit-id: d4e9255ac26b9d735236a0c2a814320ab1459b21
Former-commit-id: 1746b14c28687f53bcc5ec2455025593230b8e97

--- a/src/podiobooks/templates/base.html
+++ b/src/podiobooks/templates/base.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" >
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery/jquery-1.3.1.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 {% block head %}{% endblock %}
 </head>
 <body {% block bodyid %}id="home"{% endblock %}{% block bodyclass %}{% endblock %}">
