--- a/src/podiobooks/templates/header.html
+++ b/src/podiobooks/templates/header.html
@@ -1,14 +1,14 @@
 <!-- Header - Logo and Navigation Bar --> 
 <div id="header"> 
 	<div id="logo">
-		<a href="{% url home_page %}"><img src="http://podiobooks.com/images/logo.jpg" width="127" height="93" /></a>
+		<a href="{% url home_page %}"><img src="{{ MEDIA_URL }}legacy/images/logo.jpg" width="127" height="93" /></a>
 	</div>
 	<div id="headerbox"> 
-		<div id="title"><a href="{% url home_page %}"><img src="http://podiobooks.com/images/title.jpg"  height="70" /></a></div> 
+		<div id="title"><a href="{% url home_page %}"><img src="{{ MEDIA_URL }}legacy/images/title.jpg"  height="70" /></a></div> 
 		<div id="quicksearch">
 			<form method="POST" id="qsearch" name=id="qsearch" action="{% url title_search_redirect %}"> 
 			<table border=0 width="660"><tr><td align="left" valign="bottom" style="padding-bottom: 4px"><span class="smalltext" style="color:white;">Free serialized audio books, delivered on your schedule.</span></td> 
-			<td align="right">Search Podiobooks.com:<input type="text" name="keywords" class="formtextbox" size="20" onKeyPress="doClick(document.forms[0],event)" />&nbsp;<input class="formbutton" id="searchSubmit" name="searchSubmit" type="button" value="Go" onClick="doClickSubmit(document.forms[0])" /></form></td></tr></table> 
+			<td align="right">Search Podiobooks.com:<input type="text" name="keywords" class="formtextbox" size="20" onKeyPress="doClick(document.forms[0],event);" />&nbsp;<input class="formbutton" id="searchSubmit" name="searchSubmit" type="button" value="Go" onClick="doClickSubmit(document.forms[0])" /></form></td></tr></table> 
 		</div>
 		{% if user.is_authenticated %}
 		<div id="usercontrols"> 
