changed to use new hover widget.
Former-commit-id: 30c605bec98c70cfe97c5ae459c083ee714bbbfe
Former-commit-id: dab6ec725b1d9ff1c1e3575a9a0b9b3ce5f785fa
Former-commit-id: 599fe575691701f2436dda34124fdfa8225ae4c5
Former-commit-id: dbfb183b47ea0d5190d9eaace4018f1174d2f780
Former-commit-id: 9edcc31a565ee6ea32bec7853f6dcd23165f81f2
Former-commit-id: 52512f4c969cb8ef36fc4aff42f39f3de2d5217b

--- a/src/podiobooks/main/templates/main/index.html
+++ b/src/podiobooks/main/templates/main/index.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block headtitle %}{{ site_name }} - Serialized audio books in podcast form{% endblock %}
+{% block head %}
+	<script type="text/javascript">
+		dojo.require("dijit.Tooltip");
+		dojo.require("pbwidgets.book_desc.BookDesc");
+		dojo.require("dojo.parser");
+	</script>
+{% endblock %}
 {% block pagetitledivopen %}{% endblock %}
 {% block content %}<!-- Recent Updates List -->
 <div id="recentupdates">
@@ -100,7 +107,7 @@
             <table>
                 <tr>
                     <td align="center">
-                        <a href="{{ title.get_absolute_url }}"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" /></a>
+                        <span dojoType="pbwidgets.book_desc.BookDesc" titleId="{{ title.id }}"><a href="{{ title.get_absolute_url }}"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" /></a></span>
                     </td>
                     <td>
                         <a href="{{ title.get_absolute_url }}">
