--- a/src/podiobooks/main/templates/main/title/detail.html
+++ b/src/podiobooks/main/templates/main/title/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load title_templatetags %}
 
 {% block headtitle %}{{ title.name }} - {{ site_name }}{% endblock %}
 
@@ -18,21 +19,9 @@
 		</td>
 		<td><span class="booktitle">{{ title.name }}</span>
 			<span class="subtitle">
-				by {% if title.contributors.all %}
-					<i>
-					{% for contributor in title.contributors.all %}
-						{{ contributor.display_name }}{% if not forloop.last %},{% endif %}</li>
-					{% endfor %}
-					</i>
-				{% endif %}
+				{% show_contributors title %}
 				<br/>
-				{% if title.categories.all %}
-					<i>
-					{% for category in title.categories.all %}
-						{{ category.name }}{% if not forloop.last %},{% endif %}</li>
-					{% endfor %}
-					</i>
-				{% endif %}
+				{% show_categories title %}
 			</span>
 			<br/>
 			<br/>
@@ -63,7 +52,7 @@
 	<td>Date Created</td> 
 </tr>
 {% for episode in title.episode_set.all %}
-<tr class="{% cycle 'oddrow' 'evenrow' %}" valign="top"><td><a href="{{ episode.url }}">{{ episode.name }}</a><br/><span style="font-size: 8pt">({{ episode.filesize_mb }}	MB)</span></td><td>{{ episode.description }}</td><td nowrap >{{ episode.date_updated|date:"d-M-Y" }}</td></tr>
+<tr class="{% cycle 'oddrow' 'evenrow' %}" valign="top"><td><a href="{{ episode.url }}">{{ episode.name }}</a><br/><span style="font-size: 8pt">({{ episode.filesize|filesizeformat }}	MB)</span></td><td>{{ episode.description }}</td><td nowrap >{{ episode.date_updated|date:"d-M-Y" }}</td></tr>
 {% endfor %}
 </table>
 {% endif %}
