updated to support the templatetags and hover.
Former-commit-id: 83600e0c0c51543806db8b6a6dbf203b47e8f3c3
Former-commit-id: ce10a5573df5487f0f88acf092bc64af5031fd1a
Former-commit-id: c9b2b178bce53062203ed6ade4ac2b14947eeb1c
Former-commit-id: d47675c1c459c368dd2792a5381f687713cf1a7b
Former-commit-id: e090091e48e9cd2aacf2898c342b19b1242769b3
Former-commit-id: c81c759a8eee12dfaa25edb9f7c8df301ed0ba1c

--- a/src/podiobooks/media/css/base.css
+++ b/src/podiobooks/media/css/base.css
@@ -20,3 +20,9 @@
 	padding-top:.4em;
 	text-decoration: none;
 }
+.category-list {
+	font-style:italic;
+}
+.contributor-list {
+	font-style:italic;
+}
