--- a/src/podiobooks/templates/base.html
+++ b/src/podiobooks/templates/base.html
@@ -10,6 +10,22 @@
 {% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" >
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript">
+	//This block is used to be able to bootstrap in the CDN and local stuff side by side
+	//It has to load before the call to the dojo js
+    djConfig={
+      parseOnLoad: true,
+      isDebug: true,
+      baseUrl: "/",
+      modulePaths: { pbwidgets: "media/js/pbwidgets" }
+    };
+</script>
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.3/dijit/themes/tundra/tundra.css">
+<style type="text/css">
+	 	@import "/media/js/pbwidgets/book_desc/BookDesc.css";
+</style>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.3/dojo/dojo.xd.js" djConfig="parseOnLoad: true">
+</script>
 {% block head %}{% endblock %}
 </head>
 <body {% block bodyid %}id="home"{% endblock %}{% block bodyclass %}{% endblock %}">
