--- a/src/podiobooks/templates/base.html
+++ b/src/podiobooks/templates/base.html
@@ -17,12 +17,12 @@
       parseOnLoad: true,
       isDebug: true,
       baseUrl: "/",
-      modulePaths: { pbwidgets: "media/js/pbwidgets" }
+      modulePaths: { pbwidgets: "{{ MEDIA_URL }}/js/pbwidgets" }
     };
 </script>
 <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.3/dijit/themes/tundra/tundra.css">
 <style type="text/css">
-	 	@import "/media/js/pbwidgets/book_desc/BookDesc.css";
+	 	@import "{{ MEDIA_URL }}js/pbwidgets/book_desc/BookDesc.css";
 </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.3/dojo/dojo.xd.js" djConfig="parseOnLoad: true">
 </script>
