--- a/src/podiobooks/main/templates/main/title/detail_summary.html
+++ b/src/podiobooks/main/templates/main/title/detail_summary.html
@@ -8,6 +8,7 @@
 		width: 250px;
 		font-size: 15px;
 		font-family: "Arial Narrow";
+		background-color: #FFFFFF;
 	}
 	.title-summary-header {
 		background-color: #EFFBFB;
@@ -23,7 +24,7 @@
 		font-size: 16px;
 	}
 	.title-summary-description {
-		background-color: #00000;
+		background-color: #FFFFFF;
 	}
 	.title-summary-more {
 		font-weight: bold;
