--- a/src/podiobooks/templates/base.html
+++ b/src/podiobooks/templates/base.html
@@ -15,7 +15,7 @@
 	//It has to load before the call to the dojo js
     djConfig={
       parseOnLoad: true,
-      isDebug: true,
+      isDebug: {% if debug %}true{% else %}false{% endif %},
       baseUrl: "/",
       modulePaths: { pbwidgets: "{{ MEDIA_URL }}/js/pbwidgets" }
     };
@@ -24,7 +24,7 @@
 <style type="text/css">
 	 	@import "{{ MEDIA_URL }}js/pbwidgets/book_desc/BookDesc.css";
 </style>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.3/dojo/dojo.xd.js" djConfig="parseOnLoad: true">
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.3/dojo/dojo.xd.js">
 </script>
 {% block head %}{% endblock %}
 </head>
