Added css for title-complete-notice and title-compelte-notice-indicator.
Former-commit-id: 0b975a7d18695f1435de6242a37497fbcc7adf43
Former-commit-id: bb21e5ecf3d135cf542e79f2f857e2e3e1a819ef
Former-commit-id: 504d28e5bcb609d3146cb0a53e0fc374917d9f67
Former-commit-id: cb82659e9bdecf3cd3a16f08ef44df6c1f22194c
Former-commit-id: 8076368d0afb5b3873328c8699cab59c5c7aec3c
Former-commit-id: f19b6683a7a0d85ce3b83f8eba51184f9b95bb8f

--- a/src/podiobooks/media/css/base.css
+++ b/src/podiobooks/media/css/base.css
@@ -26,3 +26,11 @@
 .contributor-list {
 	font-style:italic;
 }
+.title-complete-notice {
+	font-size:smaller;
+	text-decoration:none;
+}
+.title-complete-notice-indicator {
+	color: blue;
+	font-weight: bold;
+}
