--- a/src/podiobooks/main/templates/main/title/detail.html
+++ b/src/podiobooks/main/templates/main/title/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load main_templatetags %}
 {% load title_templatetags %}
 
 {% block headtitle %}{{ title.name }} - {{ site_name }}{% endblock %}
