--- a/src/podiobooks/templates/base.html
+++ b/src/podiobooks/templates/base.html
@@ -10,20 +10,26 @@
 {% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" >
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+{% if debug %}
+	<script type="text/javascript">
+		var isDebug = true;
+	</script>
+{% else %}
+	<script type="text/javascript">
+		var isDebug = false;
+	</script>
+{% endif %}
 <script type="text/javascript">
 	//This block is used to be able to bootstrap in the CDN and local stuff side by side
 	//It has to load before the call to the dojo js
     djConfig={
       parseOnLoad: true,
-      isDebug: {% if debug %}true{% else %}false{% endif %},
+      isDebug: isDebug,
       baseUrl: "/",
       modulePaths: { pbwidgets: "{{ MEDIA_URL }}/js/pbwidgets" }
     };
 </script>
 <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css">
-<style type="text/css">
-	 	@import "{{ MEDIA_URL }}js/pbwidgets/book_desc/BookDesc.css";
-</style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js">
 </script>
 {% block head %}{% endblock %}
