Added debug stats.

--- a/src/podiobooks/templates/footer.html
+++ b/src/podiobooks/templates/footer.html
@@ -20,4 +20,7 @@
  	</script> 
 &nbsp;&nbsp;<a href="http://www.podiobooks.com/blog/problem-tracking/">Report A Problem</a> 
 </div> 
+{% if debug %}
+<!-- STATS: Total: %(totTime).2f Python: %(pyTime).2f DB: %(dbTime).2f Queries: %(queries)d -->
+{% endif %}
 <!-- End Footer -->
