Adjusted to only cache/pass blog entries, not the whole feed.
Former-commit-id: cf7ba4ebb927b0c8954e490be0f003844f1f2699
Former-commit-id: ea6b5a12c69602a9e0d76df81a1cbdeedd9d5fa6
Former-commit-id: 16bad45c3e7c78bbc9b3c5f81489d6db51ee89e1
Former-commit-id: 71fbb9e37f32d61c14dfe060d9ff8f5888f45441
Former-commit-id: 8f6323cfe9c7b16a73fe0cd10a0f0df30c34f2ce
Former-commit-id: a1a09e32c5b7becf7625734719da0337f4fb6f32

--- a/src/podiobooks/main/templates/main/index.html
+++ b/src/podiobooks/main/templates/main/index.html
@@ -57,7 +57,7 @@
 </div>
 <div id="rssfeed" name="rssfeed" style="height: 100px">
     <ul>
-        {% for entry in blog_feed.entries|slice:":5" %}
+        {% for entry in blog_feed_entries|slice:":5" %}
         <li>
             <a href="{{ entry.link }}">{{ entry.title }}</a>
         </li>
