--- a/src/podiobooks/templates/base.html
+++ b/src/podiobooks/templates/base.html
@@ -7,9 +7,9 @@
 <meta name="Keywords" content="audio books, audiobooks, books, novels, podcast, podcasting, podiobooks" /> 
 <meta name="Description" content="Free audio books delivered as podcasts. Subscribe for free to any book and start from chapter one. Podiobooks.com" />
 {% endblock %}
-{% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" >
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css">{% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
+{% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
 {% if debug %}
 	<script type="text/javascript">
 		var isDebug = true;
@@ -29,7 +29,7 @@
       modulePaths: { pbwidgets: "{{ MEDIA_URL }}/js/pbwidgets" }
     };
 </script>
-<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css">
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js">
 </script>
 {% block head %}{% endblock %}
