fixed double legacy.
Former-commit-id: 8fdfc3ae84ae3c1145a3b966dfccfb289fef61af
Former-commit-id: d92501eac660c1e91a61692c451345c8df41e8f6
Former-commit-id: 1e36f2b5e8eb1c3051013533228f9c514a83233b
Former-commit-id: e31ad7788e0f2410840169973480cf06cd432286
Former-commit-id: 5eaf3d54e95a7edbe24556bf0eb6cebdaa75a491
Former-commit-id: c8e9863fe35b1f0307ffea905d7c7628c40f8411

--- a/src/podiobooks/templates/base.html
+++ b/src/podiobooks/templates/base.html
@@ -8,7 +8,7 @@
 <meta name="Description" content="Free audio books delivered as podcasts. Subscribe for free to any book and start from chapter one. Podiobooks.com" />
 {% endblock %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" >
-<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css">{% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css">
 {% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
 {% if debug %}
 	<script type="text/javascript">
