Added width to title image for performance.
Former-commit-id: 7fd1ac4f2f3e07f37e79771eee764fc2e269b978
Former-commit-id: 5a49b3c8f35b8b7906bac292fbb5a21359eee21e
Former-commit-id: c254361ee87d13f1fa1f072bddc672414d397707
Former-commit-id: 0fc9cab38c61ec0b677c55812f87ed9383070149
Former-commit-id: 35e0e2546583410f25d242f0e1fe7cc18f459463
Former-commit-id: 3e1516aa2bd4565c7d3b3746f3dacc7984d33335

--- a/src/podiobooks/templates/header.html
+++ b/src/podiobooks/templates/header.html
@@ -4,7 +4,7 @@
 		<a href="{% url home_page %}"><img src="{{ MEDIA_URL }}legacy/images/logo.jpg" width="127" height="93" /></a>
 	</div>
 	<div id="headerbox"> 
-		<div id="title"><a href="{% url home_page %}"><img src="{{ MEDIA_URL }}legacy/images/title.jpg"  height="70" /></a></div> 
+		<div id="title"><a href="{% url home_page %}"><img src="{{ MEDIA_URL }}legacy/images/title.jpg" width="183" height="70" /></a></div> 
 		<div id="quicksearch">
 			<form method="POST" id="qsearch" name=id="qsearch" action="{% url title_search_redirect %}"> 
 			<table border=0 width="660"><tr><td align="left" valign="bottom" style="padding-bottom: 4px"><span class="smalltext" style="color:white;">Free serialized audio books, delivered on your schedule.</span></td> 
