--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -1,4 +1,56 @@
 {% extends "base.html" %}
-{% block content %}
-Hello, world!
+{% load main_templatetags %}
+{% load title_templatetags %}
+{% block head %}
+<style type="text/css">
+    
+</style>
+<script type="text/javascript">
+    dojo.require("pbwidgets.book_shelf.BookShelf");
+</script>
 {% endblock %}
+{% block title %}{% endblock %}
+{% block content %}
+<button id="previous" onClick="dijit.byId('stackContainer').back()" dojoType="dijit.form.Button">
+    &lt;
+</button>
+<span dojoType="dijit.layout.StackController" containerId="stackContainer"></span>
+<button id="next" onClick="dijit.byId('stackContainer').forward()" dojoType="dijit.form.Button">
+    &gt;
+</button>
+<div dojoType="pbwidgets.book_shelf.BookShelf" id="stackContainer">
+    <div dojoType="dijit.layout.ContentPane" title="1">
+        Here is the first row of Books.
+    </div>
+    <div dojoType="dijit.layout.ContentPane" title="2">
+        Here is the second Row of Books.
+    </div>
+</div>
+<hr>
+<div class="box">
+    <div class="topleft">
+        <div class="topright">
+            <div>
+				{% if title_list %}
+				{% for title in title_list|slice:":2" %}
+					<span style="margin-left: 4px"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="144" height="212"/></span>
+				{% endfor %}
+				{% endif %}
+            </div>
+        </div>
+    </div>
+    <div class="bottomleft">
+        <div class="bottomright">
+        </div>
+    </div>
+</div>
+<hr>
+{% if title_list %}
+				{% for title in title_list|slice:":2" %}
+				{% show_titlecover title %}
+				<span width="144" height="212"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="144" height="212"/></span>
+				{% endfor %}
+				{% endif %}
+{% endblock %}
+
+
