--- a/src/podiobooks/templates/themes/tim1/header.html
+++ b/src/podiobooks/templates/themes/tim1/header.html
@@ -1,6 +1,6 @@
 <!-- Header - Logo and Navigation Bar --> 
 <div id="header"> 
-	<div id="logo">
+	<div id="logo" style="text-align:center;">
 		<a href="{% url home_page %}"><img src="{{ MEDIA_URL }}themes/tim1/images/logo.png" width="654" height="158" /></a>
 	</div>
 </div>
