--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -27,30 +27,21 @@
     </div>
 </div>
 <hr>
-<div class="box">
-    <div class="topleft">
-        <div class="topright">
-            <div>
-				{% if title_list %}
-				{% for title in title_list|slice:":2" %}
-					<span style="margin-left: 4px"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="144" height="212"/></span>
-				{% endfor %}
-				{% endif %}
-            </div>
-        </div>
-    </div>
-    <div class="bottomleft">
-        <div class="bottomright">
-        </div>
-    </div>
+<div class="pb-shelf" style="height:238px; width:736px; display: block;background: url({{ MEDIA_URL }}themes/tim1/images/pb-shelfbox-light.png) top left no-repeat; padding: 12px 10px 12px 5px; position:relative">
+	<div class="pb-shelf-titlebar" style="margin:0 0 12px 10px;padding:0;"><span class="pb-shelf-title" style="font-family:Verdana, Arial, sans-serif; font-size: 24px; color: white; vertical-align:top;font-stretch:condensed;">Featured Titles</span></div>
+	{% if title_list %}
+	{% for title in title_list|slice:":3" %}
+		<div style="margin: 4px 0 0 15px; width:220px; height:160px; background-image:url({{ MEDIA_URL }}themes/tim1/images/pb-title-feature-frame.png); background-repeat:no-repeat; position:relative; float:left;">
+			<img style="position:absolute; top: 10px; left: 10px;" src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="67" height="99"/>
+			<div style="position:absolute; top: 12px; left: 90px; font-family:Verdana, Arial, sans-serif; margin-right: 10px;">
+				<p style="font-size: 12px; color: #0054a6; font-weight:bold; padding:0px; margin:0px;font-stretch:condensed;line-height:90%;">{{ title.name }}</p>
+				<p style="font-size: 10px; color: black;margin-top:4px;"">{% show_contributors title %}</p>
+				<p style="font-size: 10px; color: black;margin-top:2px;">in <span style="color: #0054a6">{% show_categories title %}</span></p>
+				<p style="font-size: 10px; color: black;margin-top:6px;">{% autoescape off %}{{ title.description|striptags|truncatewords_html:20 }}{% endautoescape %}</p>
+			</div>
+		</div>
+	{% endfor %}
+	{% endif %}				
 </div>
-<hr>
-{% if title_list %}
-				{% for title in title_list|slice:":2" %}
-				{% show_titlecover title %}
-				<span width="144" height="212"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="144" height="212"/></span>
-				{% endfor %}
-				{% endif %}
 {% endblock %}
-
 
