Added footer comment.

--- a/src/podiobooks/templates/themes/tim1/footer.html
+++ b/src/podiobooks/templates/themes/tim1/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer --> 
 <div id="footer">
-	
+	<!--Footer-->
 </div> 
 {% if debug %}
 <!-- STATS: Total: %(totTime).2f Python: %(pyTime).2f DB: %(dbTime).2f Queries: %(queries)d -->
