--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -3,7 +3,6 @@
 {% load title_templatetags %}
 {% block head %}
 <style type="text/css">
-    
 </style>
 <script type="text/javascript">
     dojo.require("pbwidgets.book_shelf.BookShelf");
@@ -11,37 +10,48 @@
 {% endblock %}
 {% block title %}{% endblock %}
 {% block content %}
-<button id="previous" onClick="dijit.byId('stackContainer').back()" dojoType="dijit.form.Button">
-    &lt;
-</button>
-<span dojoType="dijit.layout.StackController" containerId="stackContainer"></span>
-<button id="next" onClick="dijit.byId('stackContainer').forward()" dojoType="dijit.form.Button">
-    &gt;
-</button>
-<div dojoType="pbwidgets.book_shelf.BookShelf" id="stackContainer">
-    <div dojoType="dijit.layout.ContentPane" title="1">
-        Here is the first row of Books.
+<div class="pb-shelf">
+    <div class="pb-shelf-left-arrow" onclick="dijit.byId('authorSpotlightShelf').forward();">
     </div>
-    <div dojoType="dijit.layout.ContentPane" title="2">
-        Here is the second Row of Books.
+    <div class="pb-shelf-middle">
+        <div class="pb-shelf-titlebar">
+            Author Spotlight
+        </div>
+        {% if title_list %}
+        {% for title in title_list|slice:":6" %}
+        {% if forloop.first %}
+        <div dojoType="pbwidgets.book_shelf.BookShelf" id="authorSpotlightShelf">
+            <div dojoType="dijit.layout.ContentPane" title="1">
+                {% endif %}
+                <div class="pb-shelf-item">
+                    <img class="pb-shelf-item-cover-image" src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="67" height="99"/><img class="pb-shelf-item-preview-icon" src="{{ MEDIA_URL }}themes/tim1/images/pb-preview-icon.png" width="63" height="19" onlick="Preview Placeholder"/>
+                    <div class="pb-shelf-item-text">
+                        <p class="pb-shelf-item-title">
+                            {{ title.name }}
+                        </p>
+                        <p class="pb-shelf-item-contributors">
+                            {% show_contributors title %}
+                        </p>
+                        <p class="pb-shelf-item-categories">
+                            in <span style="color: #0054a6">{% show_categories title %}</span>
+                        </p>
+                        <p class="pb-shelf-item-tags">
+                            {% autoescape off %}{{ title.description|striptags|truncatewords_html:18 }}{% endautoescape %}
+                        </p>
+                    </div>
+                </div>
+                {% ifequal forloop.counter 3 %}
+            </div>
+            <div dojoType="dijit.layout.ContentPane" title="2" style="opacity:0">
+                {% endifequal %}
+                {% if forloop.last  %}
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+        {% endif %}
     </div>
-</div>
-<hr>
-<div class="pb-shelf" style="height:238px; width:736px; display: block;background: url({{ MEDIA_URL }}themes/tim1/images/pb-shelfbox-light.png) top left no-repeat; padding: 12px 10px 12px 5px; position:relative">
-	<div class="pb-shelf-titlebar" style="margin:0 0 12px 10px;padding:0;"><span class="pb-shelf-title" style="font-family:Verdana, Arial, sans-serif; font-size: 24px; color: white; vertical-align:top;font-stretch:condensed;">Featured Titles</span></div>
-	{% if title_list %}
-	{% for title in title_list|slice:":3" %}
-		<div style="margin: 4px 0 0 15px; width:220px; height:160px; background-image:url({{ MEDIA_URL }}themes/tim1/images/pb-title-feature-frame.png); background-repeat:no-repeat; position:relative; float:left;">
-			<img style="position:absolute; top: 10px; left: 10px;" src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="67" height="99"/>
-			<div style="position:absolute; top: 12px; left: 90px; font-family:Verdana, Arial, sans-serif; margin-right: 10px;">
-				<p style="font-size: 12px; color: #0054a6; font-weight:bold; padding:0px; margin:0px;font-stretch:condensed;line-height:90%;">{{ title.name }}</p>
-				<p style="font-size: 10px; color: black;margin-top:4px;"">{% show_contributors title %}</p>
-				<p style="font-size: 10px; color: black;margin-top:2px;">in <span style="color: #0054a6">{% show_categories title %}</span></p>
-				<p style="font-size: 10px; color: black;margin-top:6px;">{% autoescape off %}{{ title.description|striptags|truncatewords_html:20 }}{% endautoescape %}</p>
-			</div>
-		</div>
-	{% endfor %}
-	{% endif %}				
+    <div class="pb-shelf-right-arrow" onclick="dijit.byId('authorSpotlightShelf').forward();">
+    </div>
 </div>
 {% endblock %}
-
