Added dark and controller styles.
Former-commit-id: 7643aab48e10be4e018c7b1c33a77ca12364977e
Former-commit-id: 606f6b0dd267aa6808c0a3b1ecb236365e8e4ef9
Former-commit-id: cef24d6df8e1fb7850e0676fccfbfb87f975237a
Former-commit-id: 725b0fc7b69929147743b6ca99e9f1ea5e4bc5b8
Former-commit-id: 8c813b503b8ad4215b4ee5cb14d699aeab84e543

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -1,7 +1,5 @@
 .pb-shelf {
 	position: relative;
-	height: 226px;
-	width: 760px;
 	margin-bottom: 10px;
 	font-family: Verdana, Arial, sans-serif;
 	font-size: 11px;
@@ -30,6 +28,40 @@
 	width: 20px;
 	background: url(../images/pb-shelfbox-light-ends.png) bottom right no-repeat;
 	cursor: pointer;
+}
+
+.pb-shelf-controller {
+	height: 10px;
+	float: right;
+}
+
+.pb-shelf-controller .dijitToggleButton {
+	border: none;
+	background-color: transparent;
+	font-size: 4px;
+	line-height: 10px;
+	clear: all;
+}
+
+.pb-shelf-controller .dijitButtonNode {
+	border: none;
+}
+
+.pb-shelf-controller .dijitButtonContents {
+	background-color: transparent;
+	border: none;
+}
+
+.pb-shelf-controller .pb-shelf-controller-icon {
+	background-image: url(../images/pb-shelf-controller-icons.png); 
+	background-repeat: no-repeat;
+	width: 10px;
+	height: 10px;
+	background-position: right;
+}
+
+.pb-shelf-controller .dijitToggleButtonChecked .pb-shelf-controller-icon {
+	background-position: left;
 }
 
 .pb-shelf-titlebar {
@@ -87,4 +119,38 @@
 .pb-shelf-item-tags {
 	margin-top: 6px;
 	font-size: 10px;
+}
+
+.pb-feature-shelf {
+	position: relative;
+	height: 230px;
+	width: 970px;
+	margin-bottom: 10px;
+	font-family: Verdana, Arial, sans-serif;
+	font-size: 11px;
+	color: #000;
+}
+
+.pb-feature-shelf-left-arrow {
+	float: left;
+	height: 230px;
+	width: 20px;
+	background: url(../images/pb-shelfbox-dark-ends.png) bottom left no-repeat;
+	cursor: pointer;
+}
+
+.pb-feature-shelf-middle {
+	float: left;
+	height: 230px;
+	width:  955px;
+	padding-top: 6px;
+	background: url(../images/pb-shelfbox-dark-middle.png) repeat-x;
+}
+
+.pb-feature-shelf-right-arrow {
+	float: left;
+	height: 230px;
+	width: 20px;
+	background: url(../images/pb-shelfbox-dark-ends.png) bottom right no-repeat;
+	cursor: pointer;
 }
